cmake_minimum_required(VERSION 3.14)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp collections/Map.h collections/Map.cpp util/sha256.cpp util/sha256.h  model/Exam.cpp dao/UserDao.cpp dao/UserDao.h repository/StandardRepository.h model/User.cpp model/User.h model/AuthResponse.cpp model/AuthResponse.h model/Category.cpp model/Category.h model/Exam.cpp model/Exam.h model/Question.cpp model/Question.h model/ExamSession.cpp model/ExamSession.h util/Utils.cpp util/Utils.h auth/Authentication.cpp auth/Authentication.h repository/UserRepository.cpp repository/UserRepository.h repository/CategoryRepository.cpp repository/CategoryRepository.h repository/ExamSessionRepository.cpp repository/ExamSessionRepository.h dao/CategoryDao.cpp dao/CategoryDao.h dao/ExamSessionDao.cpp dao/ExamSessionDao.h core/AdminManagement.h core/AuthManagement.h core/CoreManagement.h core/UserManagement.h repository/ExamRepository.cpp repository/ExamRepository.h dao/ExamDao.cpp dao/ExamDao.h)